# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml
docs/: application.css  index.html  metrics.html  sample_page.html
page_loader/: cli.py  load.py  loader.py  log.py  logging.py
page_loader/scripts/: page_loader.py  run.py
tests/: constants.py  test_loader.py
tests/fixtures/: example_site.html  rsergeichuk-pythonanywhere-com-dashboard-  ru-hexlet-io-courses
