[tool.poetry]
name = "page-loader_by_Roman-Sergeichuk"
version = "0.1.0"
description = ""
authors = ["Roman-Sergeichuk <sergeichuk.roman@mail.ru>"]

packages = [
{ include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
page-loader = "page_loader.scripts.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
